# cim-sim

./: .gitignore  CMakeLists.txt  convert_inst.sh
config/: as_config.json  config_base_0.9V.json  config_bs_0.9V.json  config_bs_vs_0.9V.json  config_template.json  config_vs_0.9V.json  profiler_config.json
config/0p72V/: config_base.json  config_bs.json  config_bs_vs.json  config_vs.json
config/0p8V/: config_base.json  config_bs.json  config_bs_vs.json  config_vs.json
config/2024dac/: config-bak.json  config.json
config/2025paper/: config_16_base.json  config_32_base.json  config_48_base.json  config_64_base.json
config/llm/: 32-core-x4y8-flit16.json  config.json  llm_config.json
config/test/: Core_Transfer_test_config.json  Local_dedicated_data_path_test_config.json  Reduce_test_config_1.json  Reduce_test_config_2.json  Reduce_test_config_3.json  SIMD_Transfer_test_config.json  SIMD_test_config_2.json  Transfer_test_config_load_cim.json  cim_compute_unit_test_config_base.json  cim_compute_unit_test_config_bs.json  cim_compute_unit_test_config_bs_vs.json  cim_compute_unit_test_config_vs.json  cim_control_unit_test_config_output.json  cim_control_unit_test_config_set_activation.json  macro_group_test_config_base.json  macro_group_test_config_wbs_ibs.json  macro_group_test_config_wbs_ibs_wvs.json  macro_group_test_config_wvs.json  macro_simulation_test_config.json  macro_test_config_base.json  macro_test_config_ibs.json  macro_test_config_wbs.json  macro_test_config_wbs_ibs.json  pim_control_unit_test_config_output.json  pim_control_unit_test_config_set_activation.json  scalar_test_config.json
doc/: ISA.md
script/: run_sim_0.8V.sh
src/address_space/: address_space.cpp  address_space.h
src/base_component/: base_module.cpp  base_module.h  clock.cpp  clock.h  energy_counter.cpp  energy_counter.h  fsm.h  reg_unit_socket.cpp  reg_unit_socket.h  stall_handler.cpp  stall_handler.h  submodule_socket.h
src/chip/: chip.cpp  chip.h
src/config/: config.cpp  config.h  config_enum.cpp  config_enum.h  constant.h
src/core/: core.cpp  core.h  payload.h
src/isa/: inst_v1.cpp  inst_v1.h  inst_v2.cpp  inst_v2.h  inst_v3.cpp  inst_v3.h  isa.h  isa_v2.h
src/memory/: global_memory.cpp  global_memory.h  memory.cpp  memory.h  memory_hardware.h  memory_socket.cpp  memory_socket.h  memory_unit.cpp  memory_unit.h  payload.h  ram.cpp  ram.h  reg_buffer.cpp  reg_buffer.h
src/network/: network.cpp  network.h  payload.h  switch.cpp  switch.h  switch_socket.cpp  switch_socket.h
src/profiler/: profiler.cpp  profiler.h  timing_statistic.cpp  timing_statistic.h
src/simulator/: constant.h  layer_simulator.cpp  layer_simulator.h  network_simulator.cpp  network_simulator.h
src/util/: ins_stat.cpp  ins_stat.h  log.cpp  log.h  macro_scope.h  reporter.cpp  reporter.h  util.cpp  util.h
test/: chip_test.cpp  core_test.cpp  inst_convert.cpp  test.cpp  unit_test.cpp
test/base/: test_payload.cpp  test_payload.h
test/execute_unit_test/: cim_compute_unit_test.cpp  cim_control_unit_test.cpp  execute_unit_test.h  pim_compute_unit_test.cpp  pim_control_unit_test.cpp  pim_set_unit_test.cpp  simd_unit_test.cpp  transfer_unit_test.cpp
test/other_test/: config_test.cpp  local_memory_unit_test.cpp  macro_group_test.cpp  macro_test.cpp  memory_unit_test.cpp
test_config/: alexnet_0.9V.json  efficient_0.9V.json  mobilev2_0.9V.json  resnet18_0.9V.json  vgg19_0.9V.json
test_config/0p72V/: alexnet.json  efficient.json  mobilev2.json  resnet18.json  vgg19.json
test_config/0p8V/: alexnet.json  efficient.json  mobilev2.json  resnet18.json  vgg19.json
test_config/2025_paper/: alexnet.json  efficient.json  mobilev2.json  resnet18.json  vgg19.json
test_data/: test_config.json  transfer_unit_test_data_1.json
test_data/chip_v2/: chip_test_data_1.json  chip_test_data_10.json  chip_test_data_11.json  chip_test_data_12.json  chip_test_data_13.json  chip_test_data_14.json  chip_test_data_15.json  chip_test_data_16.json  chip_test_data_17.json  chip_test_data_18.json  chip_test_data_19.json  chip_test_data_2.json  chip_test_data_20.json  chip_test_data_21.json  chip_test_data_22.json  chip_test_data_23.json  chip_test_data_24.json  chip_test_data_25.json  chip_test_data_26.json  chip_test_data_3.json  chip_test_data_4.json  chip_test_data_5.json  chip_test_data_6.json  chip_test_data_7.json  chip_test_data_8.json  chip_test_data_9.json  network_config_3.json  network_config_4.json
test_data/cim_control/: cim_control_unit_test_data_1.json  cim_control_unit_test_data_2.json  cim_control_unit_test_data_3.json  cim_control_unit_test_data_4.json  cim_control_unit_test_data_5.json  cim_control_unit_test_data_6.json  cim_control_unit_test_data_7.json
test_data/core/: core_test_data_13.json  core_test_data_14.json  core_test_data_3.json  core_test_data_4.json  core_test_data_5.json  core_test_data_6.json  core_test_data_7.json  core_test_data_8.json  core_test_data_9.json
test_data/core_v2/: core_test_data_1.json  core_test_data_10.json  core_test_data_11.json  core_test_data_12.json  core_test_data_13.json  core_test_data_14.json  core_test_data_15.json  core_test_data_16.json  core_test_data_17.json  core_test_data_18.json  core_test_data_19.json  core_test_data_2.json  core_test_data_20.json  core_test_data_21.json  core_test_data_22.json  core_test_data_23.json  core_test_data_24.json  core_test_data_25.json  core_test_data_26.json  core_test_data_27.json  core_test_data_3.json  core_test_data_4.json  core_test_data_5.json  core_test_data_6.json  core_test_data_7.json  core_test_data_8.json  core_test_data_9.json  inst_v2_template.json
test_data/macro/: macro_test_data_base.json  macro_test_data_base_ipu.json  macro_test_data_ibs.json  macro_test_data_ibs_ipu.json  macro_test_data_ibs_wbs.json  macro_test_data_ibs_wbs_ipu.json  macro_test_data_wbs.json  macro_test_data_wbs_ipu.json
test_data/macro_group/: macro_group_test_data_base.json  macro_group_test_data_ibs_wbs.json  macro_group_test_data_ibs_wbs_wvs.json  (+1 more)
util/: print_result.py  print_timing.py  tool.py  write_bin.py
(+82 files in other folders)
